k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
spec:
  type: NodePort
  selector:
    app: hello-world-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30001
